--- a/index.html
+++ b/index.html
@@ -131,11 +131,33 @@
                                 <span>Por favor, insira um e-mail válido</span>
                             </div>
                         </div>
-
-
                     </fieldset>
-                    
-                    
+
+                    <fieldset class="enroll-options">
+                        <legend>Opções de matricula</legend>
+
+                        <div class="radio-wrapper">
+                            <label for="">Selecione o turno de estudo</label>
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="shift" id="morning" value="morning">
+                                <img src="assets/icons/sun-cloud-02.svg" alt="">
+                                <label for="morning">Manhã</label>
+                            </div>
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="shift" id="morning" value="morning">
+                                <img src="assets/icons/sun-cloud-02.svg" alt="">
+                                <label for="morning">Manhã</label>
+                            </div>
+                            <div class="radio-inner">
+                                <div class="radio-image"></div>
+                                <input type="radio" name="shift" id="afternoon" value="afternoon">
+                                <img src="assets/icons/sun-02.svg" alt="">
+                                <label for="afternoon">Tarde</label>
+                            </div>
+                        </div>
+                    </fieldset>
                 </form>
             </div>
         </main>
