refactor radio button styles and structure; add new SVG icons for checked, default, and hover states

--- a/index.html
+++ b/index.html
@@ -135,15 +135,9 @@
 
                     <fieldset class="enroll-options">
                         <legend>Opções de matricula</legend>
-
+                        <div class="input-wrapper">
+                        <label for="">Selecione o turno de estudo</label>
                         <div class="radio-wrapper">
-                            <label for="">Selecione o turno de estudo</label>
-                            <div class="radio-inner">
-                                <div class="radio-image"></div>
-                                <input type="radio" name="shift" id="morning" value="morning">
-                                <img src="assets/icons/sun-cloud-02.svg" alt="">
-                                <label for="morning">Manhã</label>
-                            </div>
                             <div class="radio-inner">
                                 <div class="radio-image"></div>
                                 <input type="radio" name="shift" id="morning" value="morning">
@@ -155,6 +149,7 @@
                                 <input type="radio" name="shift" id="afternoon" value="afternoon">
                                 <img src="assets/icons/sun-02.svg" alt="">
                                 <label for="afternoon">Tarde</label>
+                            </div>
                             </div>
                         </div>
                     </fieldset>
