--- a/index.html
+++ b/index.html
@@ -152,6 +152,53 @@
                             </div>
                             </div>
                         </div>
+
+                        <div class="input-wrapper">
+                            <label for="">Em qual esporte gostaria de inscrever seu filho?</label>
+
+                            <div class="radio-wrapper">
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="soccer" value="soccer">
+                                    <img src="assets/icons/football.svg" alt="">
+                                    <label for="soccer">Futebol</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="basketball" value="basketball">
+                                    <img src="assets/icons/basketball-02.svg" alt="">
+                                    <label for="basketball">Basquete</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="swimming" value="swimming">
+                                    <img src="assets/icons/swimming.svg" alt="">
+                                    <label for="swimming">Natação</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="yoga" id="yoga" value="yoga">
+                                    <img src="assets/icons/yoga-02.svg" alt="">
+                                    <label for="yoga">Yoga</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="volleyball" id="volleyball" value="volleyball">
+                                    <img src="assets/icons/volleyball.svg" alt="">
+                                    <label for="volleyball">Voleibol</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="boxing" id="boxing" value="boxing">
+                                    <img src="assets/icons/boxing-glove-01.svg" alt="">
+                                    <label for="boxing">Boxe</label>
+                                </div>
+                        </div>
                     </fieldset>
                 </form>
             </div>
